# axhash

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/criterion/axhash_hash-trait/axhash_of_seeded_struct/base/: estimates.json  sample.json  tukey.json
assets/criterion/axhash_hash-trait/axhash_of_seeded_struct/before/: estimates.json  tukey.json
assets/criterion/axhash_hash-trait/axhash_of_seeded_struct/new/: benchmark.json  sample.json
assets/criterion/axhash_hash-trait/axhash_of_seeded_struct/report/: index.html
assets/criterion/axhash_hash-trait/axhash_of_string/base/: estimates.json  sample.json  tukey.json
assets/criterion/axhash_hash-trait/axhash_of_string/before/: benchmark.json  tukey.json
assets/criterion/axhash_hash-trait/axhash_of_string/new/: estimates.json  sample.json
assets/criterion/axhash_hash-trait/axhash_of_string/report/: index.html
assets/criterion/axhash_hash-trait/axhash_of_struct/base/: benchmark.json  estimates.json  sample.json  tukey.json
assets/criterion/axhash_hash-trait/axhash_of_struct/new/: estimates.json  sample.json  tukey.json
assets/criterion/axhash_hash-trait/axhash_of_struct/report/: index.html
assets/criterion/axhash_hash-trait/axhash_of_u64/base/: benchmark.json  estimates.json  sample.json  tukey.json
assets/criterion/axhash_hash-trait/axhash_of_u64/before/: tukey.json
assets/criterion/axhash_hash-trait/axhash_of_u64/new/: estimates.json  sample.json
assets/criterion/axhash_hash-trait/axhash_of_u64/report/: index.html
assets/criterion/axhash_hash-trait/report/: index.html
assets/criterion/axhash_one-shot/axhash/report/: index.html
assets/criterion/axhash_one-shot/report/: index.html
assets/criterion/axhash_seeded/axhash_seeded/report/: index.html
assets/criterion/axhash_seeded/report/: index.html
assets/criterion/axhash_wrapper-api/16B/report/: index.html
assets/criterion/axhash_wrapper-api/256B/report/: index.html
assets/criterion/axhash_wrapper-api/4B/report/: index.html
assets/criterion/axhash_wrapper-api/4K/report/: index.html
assets/criterion/axhash_wrapper-api/64B/report/: index.html
assets/criterion/axhash_wrapper-api/64K/report/: index.html
assets/criterion/axhash_wrapper-api/hash/report/: index.html
assets/criterion/axhash_wrapper-api/hash_with_seed/report/: index.html
assets/criterion/axhash_wrapper-api/report/: index.html
assets/criterion/concurrent_mutex-write/1/report/: index.html
assets/criterion/concurrent_mutex-write/2/report/: index.html
assets/criterion/concurrent_mutex-write/4/report/: index.html
assets/criterion/concurrent_mutex-write/8/report/: index.html
assets/criterion/concurrent_mutex-write/AxBuildHasher/report/: index.html
assets/criterion/concurrent_mutex-write/DefaultHasher/report/: index.html
assets/criterion/concurrent_mutex-write/report/: index.html
assets/criterion/concurrent_parallel-independent/report/: index.html
assets/criterion/concurrent_shared-read-only/report/: index.html
assets/criterion/concurrent_thread-local-hasher/report/: index.html
assets/criterion/hashmap_build-hasher/build_hasher/new/: sample.json  (+1 more)
assets/criterion/hashmap_get-hit/report/: index.html
assets/criterion/hashmap_get-miss/report/: index.html
assets/criterion/hashmap_insert-string/report/: index.html
assets/criterion/hashmap_insert-u64/report/: index.html
assets/criterion/hashmap_mixed/report/: index.html
assets/criterion/hashmap_str-keys/report/: index.html
assets/criterion/latency_finish-idempotent/report/: index.html
assets/criterion/latency_hasher-finish/report/: index.html
assets/criterion/latency_small-key/report/: index.html
assets/criterion/report/: index.html
assets/criterion/streaming_chunk-size/report/: index.html
assets/criterion/streaming_large/report/: index.html
assets/criterion/streaming_mixed-struct/report/: index.html
assets/criterion/streaming_primitives/report/: index.html
benches/: concurrent.rs  hashmap.rs  head_to_head.rs  latency.rs  my_criterion.rs  streaming.rs  stress_test.rs  throughput.rs
benches/util/: mod.rs
crates/axhash-core/: Cargo.toml  README.md
crates/axhash-core/benches/: head_to_head.rs  my_criterion.rs  stress_test.rs
crates/axhash-core/benches/modules/: avalanche.rs  common.rs  large_bytes.rs  mixed_bytes.rs  short_bytes.rs
crates/axhash-core/examples/: basic_usage.rs  hashmap_usage.rs  manual_axhasher.rs
crates/axhash-core/src/: constants.rs  hasher.rs  lib.rs  math.rs  memory.rs
crates/axhash-core/src/backend/: aarch64.rs  mod.rs  scalar.rs  x86_64.rs
crates/axhash-core/src/bytes/: aarch64.rs  mod.rs  scalar.rs  x86_64.rs
crates/axhash-core/src/hash/: api.rs  build.rs  core.rs  hasher_impl.rs  mod.rs
crates/axhash-core/src/hasher/: api.rs  build.rs  core.rs  mod.rs  trait_impl.rs
crates/axhash-core/src/tests/: backend_parity.rs  buildhasher.rs  collisions.rs  determinism.rs  lower_bits.rs  mod.rs  predictability.rs  trait_contract.rs
crates/axhash-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/axhash-ffi/include/: axhash.h
crates/axhash-ffi/src/: lib.rs
crates/axhash-headtohead/: Cargo.toml
crates/axhash-headtohead/src/: bench_concurrent.rs  bench_hashmap.rs  bench_latency.rs  bench_quality.rs  bench_streaming.rs  bench_throughput.rs  harness.rs  hashers.rs  main.rs
crates/axhash-profiler/: Cargo.toml
crates/axhash-profiler/src/: main.rs
crates/axhash-python/: Cargo.toml  README.md  pyproject.toml
crates/axhash-python/python/axhash/: __init__.py
crates/axhash-python/python/axhash_python/: __init__.py
crates/axhash-python/src/: lib.rs
crates/axhash-wasm/: Cargo.toml  README.md  package.json
crates/axhash-wasm/src/: lib.rs
crates/axhash-wasm/tests/: test_wasm.rs
doc/: algorithm.md  architecture.md  benchmark.md  usage.md
doc/results/: criterion-v0.10.0.txt
examples/: avalanche_probe.rs  basic_usage.rs  combination_probe.rs  hashmap_usage.rs  manual_axhasher.rs  zeroes_probe.rs
scripts/: bench.sh  package-release.py
src/: bytes.rs  constants.rs  hasher.rs  lib.rs  math.rs  memory.rs
(+664 files in other folders)
