[package]
name = "axhash"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Simple Rust entrypoint for the AxHash engine."
readme = "README.md"
keywords = ["hash", "hashing", "performance", "hasher"]
categories = ["algorithms"]

[dependencies]
axhash-core.workspace = true

[workspace]
members = [
    "crates/axhash-core",
    "crates/axhash-ffi",
    "crates/axhash-python"
]
resolver = "2"

[workspace.package]
version = "0.4.4"
authors = ["Bagus Dwi Harianto robbymangkualam2000@gmail.com"]
edition = "2024"
license = "MIT"
repository = "https://github.com/robby031/axhash"
description = "High-performance AxHash engine for multiple environments"

[workspace.dependencies]
axhash-core = { path = "crates/axhash-core", version = "0.4.4" }
pyo3 = { version = "0.28.3", features = ["abi3-py39", "extension-module"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
