[package]
name = "axhash"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Simple Rust entrypoint for the AxHash engine."
readme = "README.md"
keywords = ["hash", "hashing", "performance", "hasher"]
categories = ["algorithms"]

[dependencies]
axhash-core.workspace = true

[workspace]
members = [
    "crates/axhash-core",
    "crates/axhash-ffi"
]
resolver = "2"

[workspace.package]
version = "0.7.9"
authors = ["Bagus Dwi Harianto robbymangkualam2000@gmail.com"]
edition = "2024"
license = "MIT"
repository = "https://github.com/robby031/axhash"
description = "High-performance AxHash engine for multiple environments"

[workspace.dependencies]
axhash-core = { path = "crates/axhash-core", version = "0.7.9" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
