[package]
name = "axhash"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Simple Rust entrypoint for the AxHash engine."
readme = "README.md"
keywords = ["hash", "hashing", "performance", "hasher"]
categories = ["algorithms"]

[dependencies]
axhash-core.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "streaming"
harness = false

[[bench]]
name = "hashmap"
harness = false

[[bench]]
name = "concurrent"
harness = false

[workspace]
members = [
    "crates/axhash-core",
    "crates/axhash-ffi"
]
resolver = "2"

[workspace.package]
version = "0.8.2"
authors = ["Bagus Dwi Harianto robbymangkualam2000@gmail.com"]
edition = "2024"
license = "MIT"
repository = "https://github.com/robby031/axhash"
description = "High-performance AxHash engine for multiple environments"

[workspace.dependencies]
axhash-core = { path = "crates/axhash-core", version = "0.8.2" }
criterion = { version = "0.8.2", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
inline_always = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
