[package]
name = "axhash-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Platform-agnostic AxHash core for Rust with no_std compatibility."
readme = "README.md"
keywords = ["hash", "hashing", "performance", "no_std", "non-cryptographic"]
categories = ["algorithms", "no-std"]

[features]
default = ["std"]
std = []
wasm = []

[dependencies]

[dev-dependencies]
ahash = "0.8.12"
foldhash = "0.2.0"
rapidhash = "4.4.1"
wyhash-final4 = "0.2.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
criterion = "0.8.2"

[[bench]]
name = "head_to_head"
harness = false

[[bench]]
name = "stress_test"
harness = false

[[bench]]
name = "my_criterion"
harness = false