[package]
name = "axhash-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Platform-agnostic AxHash core for Rust with no_std compatibility."
readme = "README.md"
keywords = ["hash", "hashing", "performance", "no_std", "non-cryptographic"]
categories = ["algorithms", "no-std"]

[features]
default = ["std"]
# Enables runtime CPU feature detection via std::arch::is_*_feature_detected!.
# Disable for no_std targets; compile-time target_feature flags are used instead.
std = []
# Reserved for future WASM-specific optimisations (WASM SIMD, etc.).
# Currently a no-op; enabling it has no effect on the compiled output.
wasm = []

[lints]
workspace = true

[dependencies]
getrandom = { version = "0.2", default-features = false }

[dev-dependencies]
