[package]
name = "axhash-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Platform-agnostic AxHash core for Rust with no_std compatibility."
readme = "README.md"
keywords = ["hash", "hashing", "performance", "no_std", "non-cryptographic"]
categories = ["algorithms", "no-std"]

[features]
default = ["std"]
std = []
wasm = []

[lints]
workspace = true

[dependencies]
getrandom = { version = "0.4.2", default-features = false }

[dev-dependencies]
