[package]
name = "axhash-ffi"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "C-stable FFI wrapper and distribution crate for the AxHash engine."
readme = "README.md"
keywords = ["hash", "ffi", "c-api", "staticlib", "cdylib"]
categories = ["algorithms", "api-bindings"]
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
axhash-core.workspace = true

[build-dependencies]
cbindgen = "0.29.2"