[package]
name = "axhash-headtohead"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "headtohead"
path = "src/main.rs"

[dependencies]
axhash = { path = "../.." }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
wyhash = "0.5"
ahash = "0.8"
rustc-hash = "2"
siphasher = "0.3"
highway = "1"
