[package]
name = "axhash-python"
version = "0.1.2"
edition = "2024"
description = "Python bindings for the AxHash engine built with PyO3."
repository = "https://github.com/robby031/axhash"
license = "MIT"
readme = "README.md"
keywords = ["python", "pyo3", "hash", "binding"]
categories = ["api-bindings"]

[lib]
name = "axhash_python"
crate-type = ["cdylib"]

[dependencies]
axhash-core = { path = "../axhash-core", features = ["std"] }
pyo3 = { version = "0.23.4", features = ["abi3-py39", "extension-module"] }

[package.metadata.maturin]
python-source = "python"
module-name = "axhash_python._axhash_python"
