[package]
name = "axhash-python"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Python bindings for the AxHash engine built with PyO3."
readme = "README.md"
keywords = ["python", "pyo3", "hash", "binding"]
categories = ["api-bindings"]

[lib]
name = "axhash"
crate-type = ["cdylib"]

[dependencies]
axhash-core.workspace = true
pyo3.workspace = true

[package.metadata.maturin]
python-source = "python"
module-name = "axhash._axhash"
