[package]
name = "axhash-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the AxHash engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axhash-core.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.70"