[package]
name = "axhash-rs-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for the AxHash engine"

[lib]
name = "axhash_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
axhash-core.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.70"